Ended first revision

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -650,6 +650,14 @@ pages = {eaai9214},
 month = mar
 }
 
+@article{Franco:2020bk,
+author = {Franco, B{\'a}rbara C and Defeo, Omar and Piola, Alberto R and Barreiro, Marcelo and Yang, Hu and Ortega, Leonardo and Gianelli, Ignacio and Castello, Jorge P and Vera, Carolina and Buratti, Claudio and P{\'a}jaro, Marcelo and Pezzi, Luciano P and M{\"o}ller, Osmar O},
+title = {{Climate change impacts on the atmospheric circulation, ocean, and fisheries in the southwest South Atlantic Ocean: a review}},
+year = {2020},
+pages = {1--19},
+month = jul
+}
+
 @article{Roemmich:2015id,
 author = {Roemmich, Dean and Church, John and Gilson, John and Monselesan, Didier and Sutton, Philip and Wijffels, Susan},
 title = {{Unabated planetary warming and its ocean structure since 2006}},
@@ -1182,6 +1190,17 @@ pages = {56--70},
 month = jan
 }
 
+@article{Potts:2014bq,
+author = {Potts, Warren M and Henriques, Romina and Santos, Carmen V and Munnik, Kate and Ansorge, Isabelle and Dufois, Francois and Booth, Anthony J and Kirchner, Carola and Sauer, Warwick H H and Shaw, Paul W},
+title = {{Ocean warming, a rapid distributional shift, and the hybridization of a coastal fish species}},
+journal = {Global Change Biology},
+year = {2014},
+volume = {20},
+number = {9},
+pages = {2765--2777},
+month = sep
+}
+
 @book{Nelson:2016kk,
 author = {Nelson, Joseph S and Grande, Terry C and Wilson, Mark V H},
 title = {{Fishes of the World}},
@@ -1190,6 +1209,17 @@ year = {2016},
 series = {Nelson/Fishes of the World},
 address = {Hoboken, NJ, USA},
 month = feb
+}
+
+@article{Maureaud:2021gj,
+author = {Maureaud, Aurore A and Frelat, Romain and P{\'e}cuchet, Laur{\`e}ne and Shackell, Nancy and M{\'e}rigot, Bastien and Pinsky, Malin L and Amador, Kofi and Anderson, Sean C and Arkhipkin, Alexander and Auber, Arnaud and Barri, I{\c c}a and Bell, Richard J and Belmaker, Jonathan and Beukhof, Esther and Camara, Mohamed L and Carrasco, Renato Guevara and Choi, Junghwa and Christensen, Helle T and Conner, Jason and Cubillos, Luis A and Diadhiou, Hamet D and Edelist, Dori and Emblemsv{\aa}g, Margrete and Ernst, Billy and Fairweather, Tracey P and Fock, Heino O and Friedland, Kevin D and Garcia, Camilo B and Gascuel, Didier and Gislason, Henrik and Goren, Menachem and Guitton, J{\'e}r{\^o}me and Jouffre, Didier and Hattab, Tarek and Hidalgo, Manuel and Kathena, Johannes N and Knuckey, Ian and Kid{\'e}, Sa{\"\i}kou O and Alonso, Mariano Koen and Koopman, Matt and Kulik, Vladimir and Le{\'o}n, Jacqueline Palacios and Barmats, Ya{\textquoteright}arit Levitt and Lindegren, Martin and Llope, Marcos and Granier, F{\'e}lix Massiot and Masski, Hicham and McLean, Matthew and Meissa, Beyah and M{\'e}rillet, Laur{\`e}ne and Mihneva, Vesselina and Nunoo, Francis K E and O'Driscoll, Richard and O'Leary, Cecilia A and Petrova, Elitsa and Ramos, Jorge E and Refes, Wahid and Marcote, Esther Rom{\'a}n and Siegstad, Helle and Sobrino, Ignacio and S{\'o}lmundsson, J{\'o}n and Sonin, Oren and Spies, Ingrid and Steingrund, Petur and Stephenson, Fabrice and Stern, Nir and Tserkova, Feriha and Tserpes, Georges and Tzanatos, Evangelos and van Rijn, Itai and van Zwieten, Paul A M and Vasilakopoulos, Paraskevas and Yepsen, Daniela V and Ziegler, Philippe and Thorson, James T},
+title = {{Are we ready to track climate-driven shifts in marine species across international boundaries? - A global survey of scientific bottom trawl data}},
+journal = {Global Change Biology},
+year = {2021},
+volume = {27},
+number = {2},
+pages = {220--236},
+month = jan
 }
 
 @article{ Poloczanska:2016kk,
@@ -1215,7 +1245,6 @@ address = {Intergovernmental Panel on Climate Change}
 @article{Miller:2013iv,
 author = {Miller, Kathleen A and Munro, Gordon R and Sumaila, U Rashid and Cheung, William Wai Lung},
 title = {{Governing Marine Fisheries in a Changing Climate: A Game-Theoretic Perspective}},
-journal = {Canadian Journal of Agricultural Economics/Revue canadienne d'agroeconomie},
 year = {2013},
 volume = {61},
 number = {2},
@@ -1259,7 +1288,6 @@ month = may
 @article{Tai2017,
 author = {Tai, Travis C and Cashion, Tim and Lam, Vicky W Y and Sumaila, U Rashid},
 title = {{Ex-vessel fish price database: disaggregating prices for low-priced species from reduction fisheries}},
-journal = {Frontiers in Marine Science},
 year = {2017},
 volume = {4},
 number = {363},
