--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -152,13 +152,13 @@ The direction and intensity of shifts in transboundary stocks are largely relate
 
 **High present-day climate risk of on transboundary fisheries management**
 
-Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected and attributed changes in marine catch composition [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US) as a response to climatic, oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. As transboundary stocks continue to shift, such international disputes are likely to increase in frequency and requiring a revision of management plans [@Pinsky:2018cb; @Engler:2020bg].
+Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected and attributed changes in marine catch composition [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US) as a response to climatic, oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. **Early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk].**As transboundary stocks continue to shift, international disputes are likely to increase in frequency and stocks' health decrease requiring international collaboration and revision of management plans [@Pinsky:2018cb; @Engler:2020bg; @Maureaud:2021gj].
 
 **Hotspot of climate risk on transboundary fisheries management**
 
 Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Such regions, like the Caribbean, are characterized by high levels of warming relative to natural internal variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively small EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei], thus, making it particularly challenging for countries in these regions to coordinate the management of shifting transboundary stocks.
 
-**Management plans that are not designed to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots” is key to anticipate a potential increase in fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments, which do not have to be monetary [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) that has a conservation fund that works as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States that manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt], and the Parties to the Nauru Agreement (PNA) in the Pacific Island States that manage skipjack tuna (*Katsuwonus pelamis*). The PNA manage their fisheries under a so-called Vessel Day Scheme, which accounts for shifts in stocks and catches, and is therefore somewhat anticipatory [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or on fixed-historical proportion like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example species’ shifts within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled. Finally, changes in policy can take years (e.g., it took the PST about 10 years to agree on a conservation fund) and sometimes, the time of political change is longer than that of species shifts [@Pinsky:2012kq].**
+**Management plans that are not designed to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Thus, focusing on these “hotspots” is key to anticipate a potential increase in fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments, which do not have to be monetary [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) that has a conservation fund that works as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States that manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt], and the Parties to the Nauru Agreement (PNA) in the Pacific Island States that manage skipjack tuna (*Katsuwonus pelamis*). The PNA manage their fisheries under a so-called Vessel Day Scheme, which accounts for shifts in stocks and catches, and is therefore somewhat anticipatory [@Aqorau:2018bh]. Quota allocation methods based on a stock’s current distribution and/or on fixed-historical proportion like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. However, even management plans that take into consideration such strategies might not be fully prepared for the consequences of shifting transboundary stocks [@Pinsky:2018cb; @Koubrak:2020hw; @Engler:2020bg]. For example species’ shifts within the PNA area will likely also have to deal with the ‘newcomer issue’ that NEAFC is currently facing regarding Atlantic mackerel [@Spijkers:2017ij; @Pinsky:2018cb]. Moreover, the transition from historic to dynamic allocations can find strong resistance from stakeholders “losing” benefits from a fishery they have historically been entitled. Finally, changes in policy can take years (e.g., it took the PST about 10 years to agree on a conservation fund) and sometimes, the time of political change is longer than that of species shifts [@Pinsky:2012kq]. This is specifically true as in many cases we lack standardized data to track shifts of species across international jurisdictions [@Maureaud:2021gj] as these might already be happening.**
 
 **Potential drivers of shift and managing an uncertain future**
 
