incorporating changes from thomas

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -63,7 +63,7 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-**Climate change is shifting the distribution of shared fish stocks between neighboring countries (transboundary).** The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that 78% the world’s international boundaries will experience a shifting transboundary stock by 2030. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. Bi- and multi-lateral actions are urgently needed as lead-time for policy change is long.
+**Climate change is shifting the distribution of shared fish stocks between neighboring countries (transboundary).** The time-frame of such shifts determines the extent of climate change challenges to international fisheries governance. Using global climate-fisheries model simulations, we show that 78% the world’s international boundaries will experience a shifting transboundary stock by 2030. By 2100, 45% of stocks will have shifted for 81% of countries under a ‘no mitigation’ scenario. Hotspots of transboundary shifts occur for countries that are highly dependent on fisheries for income, food and livelihoods. The imminent onset of transboundary shifts highlights the urgency to re-formulate international fisheries policies to limit conflict over these fish stocks. **A strong expansion of bi- and multi-lateral actions** are urgently needed as lead-time for policy change is long.
 
 <!-- **One-Sentence Summary** -->
 
@@ -176,7 +176,7 @@ We estimate the year in which 663 transboundary species (i.e., 9,132 stocks) pre
 
 We coupled a mechanistic population dynamic model (i.e., the DBEM) with an Earth System Model (i.e., the Geophysical Fluid Dynamics Laboratory Earth system model, GFDL) to project the future global distribution of transboundary stocks’ under climate change (see the Supplementary Materials). Roughly, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd]. The DBEM was driven for ten different versions of the GFDL (i.e., a ten-ensemble member simulation) each of them representing an unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk].
 
-Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(eq:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
+Furthermore, we developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock's abundance centroid and that of the EEZs that share such stock (Fig. \@ref(fig:toeFigure1)A)). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution (see the Supplementary Materials - *Calculating shifts in the shared distribution of transboundary stocks*). The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence" (See Supplemental Material - Equ. \@ref(eq:four)). We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged).
 
 Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Clark:1975uu; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (See Supplemental Material - *Quantifying the intensity of transboundary stocks’ range shift*). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing but no country will be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. Finally, we computed changes in the catch proportion that were below the threat point of the neighbouring EEZs sharing a stock for two time periods relative to the historical proportion; 2030 (2021 and 2040) matching the UN 2030 Agenda and a late date (2040 to 2050).
 
