--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -798,7 +798,7 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
   historic_sd <- Trans_index %>% 
     filter(year <= Hist_y) %>% 
     # Alternative method sensitivity analysis
-    group_by(taxon_key,neighbour_id,ensemble) %>% #Average historic data per year first
+    group_by(taxon_key,neighbour_id,year) %>% #Average historic data per year first
     # group_by(taxon_key,neighbour_id,ensemble) %>% #Average historic data per year first
     summarise_at(vars("trans_index"),
                  c(trend= mean),
@@ -910,7 +910,7 @@ TransIndex <- function(Centroids, # Expecting the results from the GetCentroids 
     
     
     taxon <- unique(Raw_Result$taxon_key)
-    name_raw <- paste(my_path("R",extra_path = "/Emergence_last_raw_p90/"),taxon,"_emergence_raw.csv",sep="")
+    name_raw <- paste(my_path("R",extra_path = "/Emergence_alt_sens_raw/"),taxon,"_emergence_raw.csv",sep="")
     
     write_csv(Raw_Result,
               name_raw)
@@ -982,7 +982,7 @@ GetTransIndex <- function(taxon_key,
              Centroid = Step_one)
     )
     
-    name <- paste(my_path("R",extra_path = "/Emergence_last_p90/"),taxon_key,"_emergence.txt",sep="")
+    name <- paste(my_path("R",extra_path = "/Emergence_alt_sens/"),taxon_key,"_emergence.txt",sep="")
     
     write_csv(Step_two,
               name)
@@ -1082,13 +1082,17 @@ ensemble_list <- seq(102,111,1)
 spp_list <- unique(Transboundary_spp$taxon_key)
 
 # Already modeled species
-spp_done <- list.files(my_path("R", extra_path = "Emergence"))
+spp_done <- list.files(my_path("R", extra_path = "Emergence_alt_sens"))
 
 spp_done <- gsub("\\_.*","",spp_done)
 
 spp_reman <- spp_list[!spp_list %in% spp_done]
 
+# For plotting test
 rand_plot <- sample(spp_reman,5)
+
+# For alternative method
+alt_sens <- sample(spp_reman,30)
 
 
 ```
@@ -1106,7 +1110,7 @@ t_start <- Sys.time()
 gc()
 
     Emerging_result <- bind_rows(
-      mclapply(spp_list,
+      mclapply(alt_sens,
                GetTransIndex,
                year = year_df$year,
                Hist_y = Historic_year,
@@ -1114,7 +1118,7 @@ gc()
                ensemble_list = ensemble_list,
                Neighbours = Neighbours,
                eez_centroid = eez_centroid,
-               p = 0.90,
+               p = 0.95, # main is 95
                Plot = F
       )
     )
